Add UC SQL JOIN queries for multi-collection search
Implement SQL JOIN approach for UC (Use Case) queries as an alternative
to sequential MongoDB find() operations. Uses Oracle's native SQL JOIN
with json_value() functions for single-round-trip execution.

New features:
- SqlJoinSearchService: UC-1, UC-2, UC-4, UC-6 SQL JOIN implementations
- SqlJoinSearchResult: Builder pattern result class
- SampleDataLoader: Load UC query parameters from database
- HybridSearchCommand: --uc-benchmark, --uc1-phone, etc. CLI options
- 21 new unit tests (172 total tests now passing)

UC-1 benchmark: 26.59ms avg (Phone + SSN Last 4 2-way join)

The SQL JOIN approach provides a different performance profile compared
to sequential MongoDB finds. For full benchmark comparison, see
results/BENCHMARK_SUMMARY.md.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>